# docs/swagger.json
@@ -367,6 +367,48 @@
                 }
             }
         },
+        "/apps/manage/upload": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "app"
+                ],
+                "summary": "上传插件日志信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "zh",
+                        "description": "i18n",
+                        "name": "language",
+                        "in": "header"
+                    },
+                    {
+                        "description": "RequestBody",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.PluginUpload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/apps/tags": {
             "get": {
                 "security": [
@@ -643,6 +685,26 @@
         }
     },
     "definitions": {
+        "dto.EnvElement": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "required": {
+                    "type": "boolean"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.PageResult": {
             "type": "object",
             "properties": {
@@ -663,6 +725,17 @@
                 "msg": {
                     "type": "string",
                     "example": "success"
+                }
+            }
+        },
+        "dto.Volume": {
+            "type": "object",
+            "properties": {
+                "local": {
+                    "type": "string"
+                },
+                "target": {
+                    "type": "string"
                 }
             }
         },
@@ -769,6 +842,59 @@
         "request.AppUnInstall": {
             "type": "object"
         },
+        "request.PluginUpload": {
+            "type": "object",
+            "properties": {
+                "class": {
+                    "type": "string"
+                },
+                "command": {
+                    "type": "string"
+                },
+                "depends_version": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "docker_compose": {
+                    "type": "string"
+                },
+                "env": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.EnvElement"
+                    }
+                },
+                "github": {
+                    "type": "string"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "key": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nginx_config": {
+                    "type": "string"
+                },
+                "repo": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                },
+                "volume": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.Volume"
+                    }
+                }
+            }
+        },
         "response.AppDetail": {
             "type": "object",
             "properties": {
@@ -786,6 +912,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "nginx_config": {
+                    "type": "string"
                 },
                 "params": {
                     "$ref": "#/definitions/response.AppParams"
